--- a/content/settings.json
+++ b/content/settings.json
@@ -1,14 +1,14 @@
 {
   "domain": "lojadssports.netlify.app",
   "currency_symbol": "$",
-  "primary_color": "#222831",
+  "primary_color": "#00438c",
   "theme": {
-    "bootswatch": "cosmo",
-    "custom": "niche-game"
+    "bootswatch": "_",
+    "custom": "_"
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/lojadssports",
-  "logo": "/img/uploads/logo.png",
+  "logo": "/img/uploads/1.png",
   "name": "DS Sports - Artigos Esportivos",
   "short_name": "lojadssports",
   "lang": "en_us",
@@ -18,7 +18,7 @@
   "favicon": "/img/uploads/favicon.png",
   "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "#393e46",
+  "secondary_color": "#ff0036",
   "icon": "/img/icon.png",
   "store_id": 51288,
   "description": "lojadssports",
