Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -10,7 +10,7 @@
   "repository": "ecomplus-stores/lojadssports",
   "logo": "/img/uploads/1.png",
   "name": "DS Sports - Artigos Esportivos",
-  "short_name": "lojadssports",
+  "short_name": "DS Sports - Artigos Esportivos",
   "lang": "en_us",
   "currency": "USD",
   "mini_logo": "",
