Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -15,12 +15,12 @@
   "currency": "USD",
   "mini_logo": "",
   "font_family": "_",
-  "favicon": "/img/uploads/favicon.png",
+  "favicon": "/img/uploads/4.png",
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#ff0036",
-  "icon": "/img/icon.png",
+  "icon": "/img/uploads/5.png",
   "store_id": 51288,
   "description": "lojadssports",
-  "large_icon": "/img/large-icon.png"
+  "large_icon": "/img/uploads/5.png"
 }
